# vans-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
config/: fly.secrets.env.example
docs/: deploy-fly.md
scripts/: deploy-fly.ps1
src/vans_mcp_server/: __init__.py  __main__.py  app.py  auth.py  usage.py
src/vans_mcp_server/oauth/: __init__.py  crypto.py  discord_connect.py  google.py  store.py
src/vans_mcp_server/tools/: __init__.py  calendar.py  discord.py  gmail.py  knowledge.py  tasks.py
tests/: test_auth_and_tools.py  test_calendar_oauth.py  test_discord_bot.py  test_gmail_tools.py  test_tasks_tools.py
