[project]
name = "vans-mcp-server"
version = "0.1.0"
description = "Vans MCP Portal server — HTTP MCP Gateway for Agent Dungeon (mcp.vanscoding.com)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0",
    "fastmcp>=3.1.1",
    "google-api-python-client>=2.160",
    "google-auth>=2.37",
    "httpx>=0.28",
    "psycopg[binary]>=3.2",
    "starlette>=0.40",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
vans-mcp-server = "vans_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vans_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
